--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
  </head>
  <body>
  	<h1> Welcome to Tech Talent South</h1>
+
+ 	<img src ="https://preview.redd.it/324hk24px6n31.jpg?width=960&crop=smart&auto=webp&s=5730898e042881a99e40b98a43a3b117fa23224f">
+ 	<p>Acura NSX</p>
  </body>
  </html> 
